fixed overflow issues

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 * {
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 :root {
@@ -12,12 +12,12 @@
     --blue-grayish: hsl(246, 25%, 77%);
     --gray-shadow: rgb(0, 0, 0, 0.2);
 }
-
 body {
-    height: 100%;
-    min-height: 100vh;
+    width: 100vw;
+    overflow-x: hidden;
     background: url(./images/bg-intro-mobile.png);
     background-repeat: repeat;
+    background-size: 100%;
     background-position: center;
     background-color: var(--red);
     color: white;
@@ -26,16 +26,16 @@ body {
     line-height: 1.7;
     text-align: center;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
 .claim {
     width: 80vw;
-    min-width: 375px;
+    min-width: 320px;
     max-width: 600px;
-    margin: 100px auto;
+    margin-top: 100px;
+    margin-bottom: 100px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -66,7 +66,7 @@ h1 {
     align-items: center;
     gap: 30px;
     width: 80%;
-    min-width: 375px;
+    min-width: 320px;
 }
 
 .claim-price {
@@ -203,6 +203,9 @@ form > p > span{
 
 @media (min-width: 1000px) {
     body {
+        height: 100%;
+        min-height: 100vh;
+        overflow-y: hidden;
         background: url(./images/bg-intro-desktop.png);
         background-repeat: repeat;
         background-position: center;
